--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/common.properties
@@ -1,6 +1,13 @@
-common.exception=!! This software has encountered an error.  Please tell your friendly system administrator or software developer the following:\n%1$S\n%2$S\n
+common.exception=!! This software has encountered an error.  Please tell your friendly system administrator or software developer the following:\n%1$s\n%2$s\n
 common.jsan.missing=The JSAN library object is missing.
 common.ok=Ok
 common.clear=Clear
 common.confirm=Check here to confirm this message.
 common.error.default=Please report that this happened.
+common.barcode.status.warning=Warning: As of %1$s, this barcode (%2$s) was flagged %3.
+common.barcode.status.warning.lost=Lost
+common.barcode.status.warning.expired=Expired
+common.barcode.status.warning.barred=Barred
+common.barcode.status.warning.blocked=Blocked
+common.barcode.status.warning.unknown=with an unknown code: %1$s
+common.date.invalid=Invalid Date
