--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/cat.properties
@@ -1,6 +1,6 @@
-cat.bib_record=Bib Record: %1$S
+cat.bib_record=Bib Record: %1$s
 cat.save_record=Save Record
 cat.save.success=Record successfully saved.
 cat.save.failure=Record not likely updated.
-cat.record.counter=Record %1$S of %2$S
+cat.record.counter=Record %1$s of %2$s
 cat.preference.error=Preference not likely updated.
