plugged in hold freezing and thaw date logic.  changed display to show a green check for un-paused holds (to indicate active-ness)

--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -229,7 +229,7 @@ avoid using bookbags all together.  Thank you.">
 <!ENTITY myopac.prefs.help "This setting defines how you will be notified of holds that are ready to be picked up from the library.
 By default, holds will use the notification style you choose here.  
 However, you will still have the option to change individual holds regardless of this setting.">
-<!ENTITY myopac.holds.frozen "Frozen">
+<!ENTITY myopac.holds.unfrozen "Un-Frozen">
 <!ENTITY myopac.holds.frozen.until "Frozen Until">
 
 <!--	================================================================= 
