added ability to link back to a vendor product page from the record details page.  this is useful for supplying cover art attribution.  only currently supported options are null (no vendor links, default) and "amazon"

--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -620,3 +620,6 @@ Ensure Caps-Lock is off and try again or contact your local library.">
 <!ENTITY slimpac.advanced.language "Item Language">
 <!ENTITY slimpac.advanced.create_date "Record Creation Date">
 <!ENTITY slimpac.advanced.edit_date "Record Edit Date">
+
+<!ENTITY opac.image_provided "Image provided by">
+<!ENTITY vendor.amazon "Amazon">
