--- a/Open-ILS/web/opac/locale/en-CA/lang.dtd
+++ b/Open-ILS/web/opac/locale/en-CA/lang.dtd
@@ -232,6 +232,8 @@
 <!ENTITY staff.cat.opac.marc_view.label "MARC View">
 <!ENTITY staff.cat.opac.mark_for_overlay.accesskey "M">
 <!ENTITY staff.cat.opac.mark_for_overlay.label "Mark for Overlay">
+<!ENTITY staff.cat.opac.delete_record.accesskey "D">
+<!ENTITY staff.cat.opac.delete_record.label "Delete Record">
 <!ENTITY staff.cat.opac.menu.accesskey "A">
 <!ENTITY staff.cat.opac.menu.label "Actions for this Record">
 <!ENTITY staff.cat.opac.opac_view.accesskey "O">
