Storing the compiled search blob in a cookie.  That cookie is used to populate the advanced search widgets.  (This means we don't have to re-parse the query syntax in the OPAC).
Removed the hold cancel option from the edit column since Cancel is an
option in the new hold actions dropdown.

--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -201,7 +201,7 @@ avoid using bookbags all together.  Thank you.">
 	================================================================= -->
 <!ENTITY myopac.holds.formats "Formats">
 <!ENTITY myopac.holds.location "Pickup Location">
-<!ENTITY myopac.holds.edit.cancel "Edit/Cancel">
+<!ENTITY myopac.holds.edit "Edit">
 <!ENTITY myopac.holds.status.none "You have no items on hold at this time">
 <!ENTITY myopac.holds.status.waiting "Waiting for copy">
 <!ENTITY myopac.holds.status.intransit "In Transit">
