--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -532,7 +532,7 @@ We recommend that you remove this title from any bookbags it may have been added
 <!ENTITY result.sort_by "Sort Results by Relevance">
 <!ENTITY result.sort_by.title "Sort Results by Title">
 <!ENTITY result.sort_by.author "Sort Results by Author">
-<!ENTITY result.sort_by.pubdate "Sort Results by Publicate Date">
+<!ENTITY result.sort_by.pubdate "Sort Results by Publication Date">
 
 <!ENTITY result.limit2avail "Limit to Available">
 <!ENTITY result.info.copies "Available copies / Total copies">
