--- a/Open-ILS/web/opac/locale/en-US/lang.dtd
+++ b/Open-ILS/web/opac/locale/en-US/lang.dtd
@@ -39,6 +39,7 @@
 <!ENTITY common.username "Username">
 <!ENTITY common.username.label "Username:">
 <!ENTITY common.password "Password">
+<!ENTITY common.refresh "Refresh">
 <!ENTITY common.submit "Submit">
 <!ENTITY common.user_not_found "User not found">
 <!ENTITY common.unimplemented 'Not Yet Implemented'>
@@ -1210,3 +1211,18 @@
 <!ENTITY staff.z39_50.search_class.tcn "Accession #">
 <!ENTITY staff.z39_50.search_class.title "Title">
 <!ENTITY staff.z39_50_import_interface_label "Z39.50 IMPORT">
+<!ENTITY staff.server.admin.offline.xacts.caption "Offline Sessions">
+<!ENTITY staff.server.admin.offline.xacts.refresh.accesskey "R">
+<!ENTITY staff.server.admin.offline.xacts.create.label "Create">
+<!ENTITY staff.server.admin.offline.xacts.execute.label "Process">
+<!ENTITY staff.server.admin.offline.xacts.update.label "Update">
+<!ENTITY staff.server.admin.offline.xacts.status.label "Uploaded Transaction Files">
+<!ENTITY staff.server.admin.offline.xacts.status.desc "The transactions from the following workstations have been uploaded, but not processed.  When all expected workstations are present here, use the Process button above.">
+<!ENTITY staff.server.admin.offline.xacts.errors.label "Exceptions">
+<!ENTITY staff.server.admin.offline.xacts.errors.desc "All transactions from this session have been processed.  The errors, if any, are listed below.">
+<!ENTITY staff.server.admin.offline.xacts.export.label "Export List">
+<!ENTITY staff.server.admin.offline.xacts.print.label "Print Export">
+<!ENTITY staff.server.admin.offline.xacts.get_item.label "Retrieve Item">
+<!ENTITY staff.server.admin.offline.xacts.get_patron.label "Retrieve Patron">
+<!ENTITY staff.server.admin.offline.xacts.get_details.label "Details">
+<!ENTITY staff.server.admin.offline.xacts.errors.caption "The session is now processing.  Hit Refresh to check its status.">
