Just use one messagecatalog (offline.properties) in chrome

--- a/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
+++ b/Open-ILS/xul/staff_client/chrome/locale/en-US/offline.properties
@@ -11,3 +11,11 @@ common.barcode.status.warning.barred=Barred
 common.barcode.status.warning.blocked=Blocked
 common.barcode.status.warning.unknown=with an unknown code: %1$s
 common.date.invalid=Invalid Date
+cat.bib_record=Bib Record: %1$s
+cat.save_record=Save Record
+cat.save.success=Record successfully saved.
+cat.save.failure=Record not likely updated.
+cat.record.counter=Record %1$s of %2$s
+cat.preference.error=Preference not likely updated.
+staff.admin.survey.save_response.label=Save this response
+staff.admin.survey.save_response.accesskey=R
