--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -1,2 +1,3 @@
 cat.barcode_for_item=The barcode for the item is %1$s
 cat.batch_operation_failed=The whole batch operation failed. %1$s
+cat.copy_buckets.tab=Copy Buckets
